Update and simplify some processes, minor design improvements

--- a/src/error-full.html
+++ b/src/error-full.html
@@ -36,7 +36,7 @@
         <div class="row">
           <div class="col-five tab-full bottom-links">
             <div class="credits">
-              <p>Design adapted from: <a href="http://www.styleshout.com/" title="styleshout">styleshout</a></p>
+              <p>We apologize for any inconvenience</p>
             </div>
           </div>
         </div>
